# DE-IP2

./: Cargo.toml  Makefile  README.md  housing.db  main.py  query_log.md  train.csv
.github/workflows/: test.yml
database/: demo.db  test_database.db
src/: lib.rs  main.rs
tests/: tests.rs
